--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,46 @@ header{
   }
     /*tablet-end*/
     /*mobile*/
+    @media screen and (max-width:525px){
+      body{
+        margin: 0;
+      }
 
+      .menu{
+
+    margin-top: -20px;
+    margin-left: 380px;
+        width: 22px;
+        height: 14px;
+
+        }
+        .rectangel1{
+
+          width: 22px;
+          height: 2px;
+         margin-top: 4px;
+          background: #FFFFFF;
+        }
+        .rectangel2{
+
+          width: 22px;
+          height: 2px;
+          margin-top: 4px;
+          background: #FFFFFF;
+        }
+        .rectangel3{;
+          width: 22px;
+          height: 2px;
+        margin-top: 4px;
+          background: #FFFFFF;
+        }
+      #top-menu{
+      display: none;
+      }
+    footer p{
+      margin-right: 98px;
+    }
+    }
     /*mobile-end*/
 #logo {
   display: inline-block;
